Inline check equivalent to StringUtils.isBlank(String)